# notify-api

./: .gitignore  .taskfile  Cargo.toml  cspell.json  cspell.txt  entitlements.plist  readme.md
res/: Dockerfile
src/: main.rs
src/app/: env.rs  mod.rs  setup.rs
src/cron/: mod.rs  refresh_appdata.rs
src/db/: entity.rs  mod.rs  repo.rs
src/db/entity/: appdata.rs  email_rate_limit.rs  email_registry.rs  email_rules.rs  email_smtp_credential.rs
src/db/repo/: appdata.rs  email_rate_limit.rs  email_registry.rs  email_rules.rs  email_smtp_credential.rs
src/ext/: email_rate_limit.rs  mod.rs  response.rs  script.rs  util.rs  var.rs
src/handler/: mod.rs
src/handler/precondition/: email_authentication.rs  mod.rs  model.rs  validate_ip.rs
src/handler/private/: caller_ip.rs  defer.rs  health.rs  mod.rs
src/handler/send/: mod.rs  model.rs  send_email.rs  send_email_gmail.rs  send_email_sendgrid.rs  send_email_validate.rs
src/lookup/: appdata.rs  mod.rs
src/model/: appdata_value.rs  mod.rs  rate_limit.rs
src/svc/: mod.rs  model.rs  rate_limit.rs  smtp_proxy.rs
